<resources>
    <string name="app_name">XML Translator Free</string>
    <string name="translate">Translate</string>
    <string name="message">Paste you XML here... </string>
    <string name="email_to">EMAIL TO</string>
    <string name="example" translatable="false">&lt;resources&gt;\n&lt;string name=\"app_name\"&gt;Best App&lt;/string&gt;\n
    &lt;string name=\"app_greeting\"&gt;Welcome&lt;/string&gt;
        \n&lt;string name=\"app_message\"&gt;How are you?&lt;/string&gt;\n&lt;/resources&gt;</string>
    <string name="translate_from">Translate From</string>
    <string name="translate_to">Translate To</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="no_connection_direction">XML Translator Free could not establish a internet connection. Make sure you are connected to a network and try again.</string>
    <string name="welcome_to_xmlanguage_translator">Welcome to XML Translator Free</string>
    <string name="translate_from_choose_one">Translate From (Choose one)</string>
    <string name="translate_to_choose_one_or_more">Translate To (Choose one or more)</string>
    <string name="powered_by_yandex_translate">Powered by Yandex.Translate</string>
    <string name="paste_example_below">Paste Example Below</string>
    <string name="please_do_not_alter_the_main_xml_folder">* Please do not alter the main XML folder *</string>
    <string name="check_your_google_drive_for_your_translated_xml_strings">Check your Google Drive for your translated XML strings!</string>
    <string name="step_3">Step 3</string>
    <string name="choose_the_language_of_your_xml_strings_and_select_the_desired_languages">Choose the language of your XML strings and select the desired languages.</string>
    <string name="allow_xml_translator_permission_to_access_the_google_drive_account_of_your_choice">Allow XML Translator Free permission to access the Google Drive account of your choice.</string>
    <string name="step_2">Step 2</string>
    <string name="step_1">Step 1</string>
    <string name="how_to_use_xmlanguage_translator">How to use XML Translator Free</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="finished">Finished!</string>
    <string name="translating_updating_wait">Translating and uploading .xml files. This may take a while. Thank you for your patience.</string>
    <string name="daily_limit_reached">You have reached or are about to reach your 3000 character daily limit for free translations. To continue translating .xml, download XML Translator at 20 dollars a month with no cancellation fees!</string>
    <string name="choose_lang_translate_to">Please choose the languages to translate to.</string>
    <string name="choose_one_translate_from">Please choose ONE language to translate from</string>
    <string name="choose_lang_translate_from">Please choose the language to translate from.</string>
    <string name="paste_xml_to_translate">Please paste the XML you would like translated</string>
    <string name="by_using_this_application_you_hereby_consent_to_the_disclaimer_and_agree_to_its_terms">By using this application, you hereby consent to the disclaimer and agree to its terms.</string>
    <string name="disclaimer_2">The creator of this application does not make any warranties about the completeness, reliability and accuracy of the generated data. Any action you take upon the information you find on this application is strictly at your own risk. The creator of this application will not be liable for any losses and/or damages in connection with the use of this application.</string>
    <string name="disclaimer_1">The creator of this application doesn\'t explicitly grant use of data generated using this application\'s services. It is up to the user of this application to determine the scope of allowable usage of data supplied to this application\'s services. However, the use of this application\'s services will not alter any copyrights or usage permissions of the supplied data.</string>
    <string name="disclaimer_for_xmlanguage_translator">Disclaimer for XML Translator Free</string>
    <string name="ok">Ok</string>
    <string name="mayber_later">Maybe later</string>
    <string name="try_it">Try it</string>
    <string name="external_storage_must">External storage must be available.</string>
    <string name="mount_external_please">Please mount writable external storage media in order to use this app.</string>
    <string name="read_external_permission_necessary">Read external permission necessary to read application files.</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="write_external_permission_necessary">Write external permission necessary to write to application files.</string>
    <string name="read_permission_explain">Read External Storage permission allows this app to read important app data. Please allow this permission in App Settings.</string>
    <string name="write_permission_explain">Write External Storage permission allows this app to store important app data. Please allow this permission in App Settings.</string>
    <string name="translations_complete">Translations Complete</string>
    <string name="open_file">Open File</string>
    <string name="or">Or</string>
</resources>
