<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jantzapps.jantz.xmltranslatorfree.InstructionActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use_xmlanguage_translator"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                fontPath="fonts/avenir.ttf"
                tools:ignore="MissingPrefix"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="2px"
                android:background="@color/colorAccent"/>
            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_1"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                fontPath="fonts/avenir.ttf"
                tools:ignore="MissingPrefix"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/allow_xml_translator_permission_to_access_the_google_drive_account_of_your_choice"
                android:gravity="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_2"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                fontPath="fonts/avenir.ttf"
                tools:ignore="MissingPrefix"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_language_of_your_xml_strings_and_select_the_desired_languages"
                android:gravity="center"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_3"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                fontPath="fonts/avenir.ttf"
                tools:ignore="MissingPrefix"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_your_google_drive_for_your_translated_xml_strings"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/please_do_not_alter_the_main_xml_folder"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="4dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorPrimary">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/paste_example_below"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="#ffffff"
                    fontPath="fonts/avenir.ttf"
                    tools:ignore="MissingPrefix"/>

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/example"
                            android:textSize="16sp"
                            android:layout_marginBottom="18dp"
                            android:fontFamily="serif-monospace"/>
                    </LinearLayout>
                </ScrollView>
                <TextView
                    android:id="@+id/yandex_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/powered_by_yandex_translate"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    fontPath="fonts/avenir.ttf"
                    tools:ignore="MissingPrefix"
                    android:background="@color/colorPrimaryDark"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>
